force-app/src/objects/TR1__ResumeSearch__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Radius_Filter__c</fullName>
        <label>Radius Filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&quot;&quot;</fullName>
                    <label>-</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 km</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>15 km</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20 km</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>25 km</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>50 km</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100 km</label>
                </value>
                <value>
                    <fullName>250</fullName>
                    <label>250 km</label>
                </value>
                <value>
                    <fullName>500</fullName>
                    <label>500 km</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Radius__c</fullName>
        <label>Radius</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                    <default>true</default>
                    <label>25</label>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Recency__c</fullName>
        <label>Recency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Regional_Area_Search_Scale__c</fullName>
        <description>The field is used to pass the MW the scale value for the Regional Area field</description>
        <inlineHelpText>Regional Area Search Scale for TK</inlineHelpText>
        <label>Regional Area Search Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Regional_Area__c</fullName>
        <label>Regional Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Result_Offset__c</fullName>
        <label>Result Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Result_URL__c</fullName>
        <label>Result URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SAMMultiViewCommon_Tags__c</fullName>
        <description>This content merges with the field TR1__Tags__c inside the ResumeSearch trigger.</description>
        <label>Common Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__SAMMultiViewLocation_Tags__c</fullName>
        <label>Location Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Saved_Result__c</fullName>
        <label>Saved Result</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Saved_Resume_Search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Saved Resume Search</label>
        <referenceTo>TR1__ResumeSearch__c</referenceTo>
        <relationshipLabel>Resume Searches</relationshipLabel>
        <relationshipName>Resume_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Saved_Search_Name__c</fullName>
        <label>Saved Search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Search_Description__c</fullName>
        <label>Search Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Selected_Query_Synonyms__c</fullName>
        <label>Selected Query Synonyms</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Selected_Tag_Clouds__c</fullName>
        <label>Selected Tag Clouds</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Show_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Show_Unavailable_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Unavailable Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Skill_Condition_Query__c</fullName>
        <label>Skill Condition Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Skill_Filter__c</fullName>
        <label>Skill Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Skills_Operator__c</fullName>
        <label>Skills Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OR</fullName>
                    <default>true</default>
                    <label>OR</label>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Sorting__c</fullName>
        <label>Sorting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_for_Data_Source_Application__c</fullName>
        <label>Stage for Data Source Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__State_Area_Search_Scale__c</fullName>
        <description>The field is used to pass the MW the scale value for the State Area field</description>
        <inlineHelpText>State Area Search Scale for TK</inlineHelpText>
        <label>State Area Search Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__State_Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Status_Selected_Applications__c</fullName>
        <label>Status Selected Applications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__SuppressFacetCounts__c</fullName>
        <description>This field is used to disable/enable tag cloud.</description>
        <formula>$Setup.TR1__TextKernel_Properties__c.TR1__SuppressFacetCounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suppress Facet Counts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Suppress_Facet_Counts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to populate Suppress Facet Counts formula field(temporary solution).</description>
        <label>Suppress Facet Counts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Synonym_Language__c</fullName>
        <label>Synonym Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Systems_Experience__c</fullName>
        <label>Systems Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>ADP 2001</fullName>
                </value>
                <value>
                    <fullName>ADP HRB</fullName>
                </value>
                <value>
                    <fullName>AERS</fullName>
                </value>
                <value>
                    <fullName>Argus</fullName>
                </value>
                <value>
                    <fullName>ARISg</fullName>
                </value>
                <value>
                    <fullName>AS400</fullName>
                </value>
                <value>
                    <fullName>Clintrace</fullName>
                </value>
                <value>
                    <fullName>Clintrial</fullName>
                </value>
                <value>
                    <fullName>Cognos</fullName>
                </value>
                <value>
                    <fullName>CTI</fullName>
                </value>
                <value>
                    <fullName>CTMS</fullName>
                </value>
                <value>
                    <fullName>EDC</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>FAST</fullName>
                </value>
                <value>
                    <fullName>Fourthshift</fullName>
                </value>
                <value>
                    <fullName>Great Plains</fullName>
                </value>
                <value>
                    <fullName>Hyperion</fullName>
                </value>
                <value>
                    <fullName>IFS</fullName>
                </value>
                <value>
                    <fullName>InForm</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>JD Edwards</fullName>
                </value>
                <value>
                    <fullName>Lawson</fullName>
                </value>
                <value>
                    <fullName>Macola</fullName>
                </value>
                <value>
                    <fullName>MAS 200</fullName>
                </value>
                <value>
                    <fullName>MAS 90</fullName>
                </value>
                <value>
                    <fullName>MAS Sage</fullName>
                </value>
                <value>
                    <fullName>Maypics</fullName>
                </value>
                <value>
                    <fullName>MRI</fullName>
                </value>
                <value>
                    <fullName>MRI-Skyline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Temporary_Boolean_Keyword__c</fullName>
        <label>Temporary Boolean Keyword</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                    <default>true</default>
                    <label>History</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Units_Of_Measure__c</fullName>
        <description>Will be used in search and match to find out the candidates within the range.</description>
        <label>Units Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                    <default>true</default>
                    <label>Miles</label>
                </value>
                <value>
                    <fullName>Kilometers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__VacancyScope__c</fullName>
        <label>Vacancy Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Job</fullName>
                    <label>Jobs</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Others</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__ZipCode_Search_Scale__c</fullName>
        <label>ZipCode Search Scale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Zip_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Resume Search</label>
    <nameField>
        <displayFormat>RS-{0000000000}</displayFormat>
        <label>Resume Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resume Searches</pluralLabel>
    <recordTypes>
        <fullName>TR1__Job_Search</fullName>
        <active>true</active>
        <label>Job Search</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>